Arreglos de repositorys (Contrato y para poder usar local inMemory)